Add rules to third-element

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,3 +3,7 @@
     background-color: #ff7f7f;
     font-family: "Verdana", "DejaVu Sans", "sans-serif";
 }
+
+.odd-number#third-element {
+    font-size: 24px;
+}
