Add rules to fourth-element

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -12,3 +12,9 @@
     background-color: #90d5ff;
     font-size: 36px;
 }
+
+#fourth-element {
+    background-color: #88e788;
+    font-size: 24px;
+    font-weight: bold;
+}
