--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -10,8 +10,13 @@ body {
 
 .header {
   background: white;
-  border-bottom: 1px solid #ddd;
+  margin: 2px;
+  border: 3px solid black;
+  /* border-bottom: 1px solid #ddd; */
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -20,6 +25,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex-shrink: 0;
 }
 
 .logo {
@@ -35,6 +41,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  flex-shrink: 0;
 }
 
 a {
@@ -45,4 +52,15 @@ a {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 16px;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
